@@ -1,3 +1,4 @@
+Molecules push each other relative to their approximate molecular weight
 Added single bond break user interface (cursor with arrows), and developer control to disable it if desired
 Changed icons for 3D view and break molecule
 Added developer control to make "Reset kit" not touch molecules in collection boxes
